// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnsupportedBlock renders unsupported block message 1`] = `
<div>
  <div
    class="reark-unsupported-block"
  >
    <strong>
      Unsupported block type: 
      42
    </strong>
  </div>
</div>
`;

exports[`renders unsupported block message with undefined block_id and block_type 1`] = `
<div>
  <div
    class="reark-unsupported-block"
  >
    <strong>
      Unsupported block type: 
      unknown
    </strong>
  </div>
</div>
`;

exports[`renders unsupported block message with undefined block_type 1`] = `
<div>
  <div
    class="reark-unsupported-block"
  >
    <strong>
      Unsupported block type: 
      unknown
    </strong>
  </div>
</div>
`;
